--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "econea/nusoap": "^0.9.10",
-        "php" : "^7.2"
+        "php" : "^7.3",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "econea/nusoap": "^0.9.10",
@@ -18,7 +19,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "GlobalPayments\\" : ""
+            "GlobalPayments\\" : "src"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.3"
         }
     },
     "minimum-stability": "dev"
