Add require extension json php, fixing CardEntity PHPDoc update params string|null cvv2, XML getXmlCard METHOD 'DS_MERCHANT_EXPIRYDATE' update to accept string and implementation/refactor throws error ds_response, ds_responseint

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "econea/nusoap": "^0.9.10",
         "php" : "^7.3",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "econea/nusoap": "^0.9.10",
